syntax = "proto3";
package iroha;

message Signature {
  bytes public_key = 1;
  bytes signature = 2;
}

message Transaction {
  message Header {
    uint64 creation_time = 1;
    repeated Signature signature = 2;
  }

  message Meta {
    bytes creator_public_key = 1;
  }

  message Body {
    repeated Action action = 1;
  }

  Header header = 1;
  Meta meta = 2;
  Body body = 3;
}

message Block {
  message Header {
    uint64 creation_time = 1;
    repeated Signature peer_signature = 2;
  }

  message Meta {
    uint32 size = 1; // the number of transactions inside. Maximum 16384 or 2^14
    uint32 height = 2; // the current block number in a ledger
    bytes merkle_root = 3; // global merkle root
  }

  message Body {
    repeated Transaction transaction = 1;
  }

  Header header = 1;
  Meta meta = 2;
  Body body = 3;
}

message AddAccount {
  repeated Signature signature = 1;
}

message RegisterSignatories {
  bytes account_id = 1;
  repeated Signature signature = 2;
}

message AddPeer {
  bytes account_id = 1;
  string address = 2;
}

message Action {
  oneof command {
    AddAccount add_account = 1;
    RegisterSignatories register_signatories = 2;
    AddPeer add_peer = 3;
  }
}
